# cv-tailor

./: .dockerignore  .env.example  .gitignore  Deploy Backend to AWS  Dockerfile  render.yaml
.claude/: settings.json  settings.local.json
.github/workflows/: main.yml
backend/: alembic.ini  clients.py  config.py  enums.py  exceptions.py  main.py  pyproject.toml  utils.py
backend/agents/: ats_checker.py  cv_tailor.py  domain_guidance.py  draft_selector.py  gap_analyzer.py  graph.py  jd_parser.py
backend/api/: auth.py  db_helpers.py
backend/api/routes/: account.py  applications.py  auth.py  cv.py  experiences.py  export.py  rules.py  settings.py  tailor.py
backend/models/: database.py  tables.py
backend/schemas/: pydantic.py
backend/scripts/: test_tailoring_live.py
backend/services/: cv_service.py  cv_structurer.py  deduplicator.py  embedder.py  exporter.py  jd_scraper.py  pdf_compiler.py  pdf_parser.py  screenshot_ocr.py
backend/services/exporter/: __init__.py  _context.py  _docx.py  _fitting.py  _latex.py  _text.py
backend/templates/: cv_template.html
backend/tests/: conftest.py  test_config.py  test_cv_tailor.py  test_db_helpers.py  test_exporter_helpers.py  test_gap_analyzer.py  test_pipeline_state.py  test_schemas.py  test_utils.py  test_utils_extended.py  test_validators.py
frontend/: package.json  pnpm-lock.yaml  vitest.config.ts
frontend/__tests__/: types.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthProvider.tsx  ChangePasswordModal.tsx  Footer.tsx  (+3 more)
migrations/: env.py
plan/: settings.local.json
(+73 files in other folders)
